maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:59: error: not found: value x
		if( j!=0 && !aMurNord(i,j) && getIndication(x,y-1)<getIndication(x,y) )
                                                            ^JediEscaper:63: error: not found: value x
		else if( i!=0 && !aMurOuest(i,j) && getIndication(x-1,y)<getIndication(x,y))
                                                                  ^JediEscaper:67: error: not found: value x
		if( j!=getMondeHauteur-1 && !aMurNord(i,j+1) && getIndication(x,y+1)<getIndication(x,y))
                                                                              ^JediEscaper:71: error: not found: value x
		if( i!=getMondeLargeur-1 && !aMurOuest(i+1,j) && getIndication(x+1,y)<getIndication(x,y))
                                                                               ^